# AdventCodeTools

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
build_templates/AdventCode&@year@&/tests/tests_day_&@day_z@&/: __init__.py.template  tests_example.py.template
build_templates/tests_day_&@day_z@&/: tests_solution.py.template
conda.recipe/: meta.yaml  run_test.py
src/aoc_tools/: __init__.py  constants.py  project_calendar.py  puzzle_building.py  puzzle_solving.py
src/aoc_tools/algorithms/: __init__.py  a_star_search.py  full_search.py  grid_blocks.py  pixel_parsing.py
src/aoc_tools/algorithms/data/: pixel_characters.txt
src/aoc_tools/algorithms/graphs/: __init__.py  a_star_search.py
src/aoc_tools/data/: pixel_characters.txt
src/aoc_tools/manage/: __init__.py  project_calendar.py  puzzle_solving.py  web_scrapper.py
src/aoc_tools/visualizations/: __init__.py  colours.py  grid_blocks.py
tests/: __init__.py  tests_pixel_parser.py
tests/algorithms/: __init__.py  tests_pixel_parser.py
tests/algorithms/data/pixel_parser/: example_3.txt
tests/data/pixel_parser/: example_2.txt
tests/manage/: __init__.py  tests_project_calendar.py  tests_web_scrapper.py
tests/manage/data/: credentials_bad_format.txt  credentials_fake.txt  puzzle_input_2021_06_cut.txt  puzzle_input_2022_05_cut.txt  puzzle_input_2022_22_cut.txt  web_input_2021_06_cut.html  web_input_2022_05_cut.html  web_input_2022_22_cut.html  web_puzzle_2021_02.html  web_puzzle_2022_01.html
tests/visualizations/: __init__.py  tests_grid_blocks.py
