[metadata]
name = statechecks
url = https://github.com/JaviLunes/AdventCodeTools
description = Shared tools used for building, managing and solving all Advent of Code projects
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10, <4
install_requires =
    coverage

[options.packages.find]
where = src