[metadata]
name = aoc_tools
url = https://github.com/JaviLunes/AdventCodeTools
description = Shared tools used for building, managing and solving all Advent of Code projects
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10, <4
install_requires =
    bs4
    coverage
    html5lib
    matplotlib
    numpy
    pandas
    requests
    tabulate

[options.packages.find]
where = src

[options.exclude_package_data]
aoc_tools =
    __pycache__